Improves first run dialog performance on Win8

BUG=616829

Review-Url: https://codereview.chromium.org/2090773002
Cr-Commit-Position: refs/heads/master@{#407810}

Former-commit-id: 065fd8ffaebd901b6033aaa5d1d7693c3ff26d87