chrome/browser/ui/webui/set_as_default_browser_ui_win.h
@@ -2,14 +2,18 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef CHROME_BROWSER_UI_WEBUI_SET_AS_DEFAULT_BROWSER_UI_H_
-#define CHROME_BROWSER_UI_WEBUI_SET_AS_DEFAULT_BROWSER_UI_H_
+#ifndef CHROME_BROWSER_UI_WEBUI_SET_AS_DEFAULT_BROWSER_UI_WIN_H_
+#define CHROME_BROWSER_UI_WEBUI_SET_AS_DEFAULT_BROWSER_UI_WIN_H_
 
 #include "base/macros.h"
 #include "ui/web_dialogs/web_dialog_ui.h"
 
 class Browser;
 class Profile;
+
+namespace views {
+class Widget;
+}
 
 // The UI used in first-run flow to prompt the user to set Chrome as the
 // default Windows browser and *the browser* of Metro mode. Intended for
@@ -19,10 +23,13 @@ class SetAsDefaultBrowserUI : public ui::WebDialogUI {
   explicit SetAsDefaultBrowserUI(content::WebUI* web_ui);
 
   // Present metroizer UI either in a new singleton tab or in a dialog window.
-  static void Show(Profile* profile, Browser* browser);
+  static void Show(Profile* profile);
+
+  // Returns the web dialog widget for testing.
+  static views::Widget* GetDialogWidgetForTesting();
 
  private:
   DISALLOW_COPY_AND_ASSIGN(SetAsDefaultBrowserUI);
 };
 
-#endif  // CHROME_BROWSER_UI_WEBUI_SET_AS_DEFAULT_BROWSER_UI_H_
+#endif  // CHROME_BROWSER_UI_WEBUI_SET_AS_DEFAULT_BROWSER_UI_WIN_H_
